--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <!-- MODAL -->
-    <div class=" start-modal modal" tabindex="-1" role="dialog">
+    <div id="start-modal" class=" modal" tabindex="-1" role="dialog">
       <div class="modal-dialog-centered" role="document">
         <div class="modal-content text-center">
           <div class="modal-header">
@@ -78,7 +78,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"crossorigin="anonymous"></script>
     <!-- Google maps API-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNXb5Y-Jt1OlkmG9H0_StkD3KfJjKjOOQ&callback=myMap" async defer></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNXb5Y-Jt1OlkmG9H0_StkD3KfJjKjOOQ&callback=myMap" async defer></script> -->
   
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
