v01 - redefinição de tamanhos de imagens pagina inicial e filtro

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     
     <!-- PAGINA PRINCIPAL -->
-    <section id="main-page" class="d-flex flex-column justify-content-center">
+    <section id="main-page" class="d-flex flex-column justify-content-center align-items-center">
       
       <!-- CABEÇALHO -->
       <header>
